2022-10-03  G. Branden Robinson <g.branden.robinson@gmail.com>

	[troff]: Describe an input delete character comprehensibly.

	* src/roff/troff/input.cpp (token::description): The delete
	character (ISO 127 decimal, EBCDIC 7) is a valid `TOKEN_CHAR`
	but is not printable.  Don't attempt to output it literally in
	diagnostics; describe it in a phrase instead.

2022-10-03  G. Branden Robinson <g.branden.robinson@gmail.com>

	[troff]: Apply consistent terminology.

	* src/roff/troff/input.cpp: Rename functions to better align
	with our documentation, and decouple their names from an
	assumption of diagnostic severity.  Also give them imperative
	names since they are called for their side effects, not their
	return values.
	- empty_name_warning -> diagnose_missing_identifier
	- non_empty_name_warning -> diagnose_invalid_identifier
	(diagnose_missing_identifier): Refer to absent operand as
	"identifier", not "name", in diagnostic messages since the
	latter (strictly) refers to the request/macro/string/diversion
	name space, and this function is also used to gather register
	identifiers.

2022-10-02  G. Branden Robinson <g.branden.robinson@gmail.com>

	[tmac]: Fix Savannah #63112 (3/3).

	* tmac/latin2.tmac: Replace characters that ISO Latin-1 has but
	Latin-2 doesn't.  Map characters that ISO Latin-2 has and
	Latin-1 doesn't to their numeric code points.

2022-10-02  G. Branden Robinson <g.branden.robinson@gmail.com>

	[tmac]: Regression-test Savannah #63112 (3/3).

	* tmac/tests/latin2_works: Do it.
	* tmac/tmac.am (tmac_TESTS): Run test.

2022-10-01  G. Branden Robinson <g.branden.robinson@gmail.com>

	[tmac]: Fix Savannah #63112 (2/3).

	* tmac/latin5.tmac: Replace characters that ISO Latin-1 has but
	Latin-5 doesn't.  Map characters that ISO Latin-5 has and
	Latin-1 doesn't to their numeric code points.

2022-10-01  G. Branden Robinson <g.branden.robinson@gmail.com>

	[tmac]: Regression-test Savannah #63112 (2/3).

	* tmac/tests/latin5_works: Do it.